Migration to proper TS and formatting with Prettier

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,10 @@
     "paths": {
       "~/*": ["./app/*"]
     },
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "exactOptionalPropertyTypes": true,
+    "isolatedModules": true,
     "esModuleInterop": true,
     "verbatimModuleSyntax": true,
     "noEmit": true,
