--- a/.github/workflows/google-cloudrun-docker.yml
+++ b/.github/workflows/google-cloudrun-docker.yml
@@ -32,14 +32,13 @@ name: 'Build and Deploy to Cloud Run'
 on:
   push:
     branches:
-      - '"main"'
+      - 'main'
 
 env:
-  PROJECT_ID: 'molten-thought-458911-c5'
-  REGION: 'europe-west1'
-  SERVICE: 'bleau-info-stats-frontend'
-  WORKLOAD_IDENTITY_PROVIDER: 'projects/948104408177/locations/global/workloadIdentityPools/github-pool/providers/github-provider'
-  
+  PROJECT_ID: 'molten-thought-458911-c5' # TODO: update to your Google Cloud project ID
+  REGION: 'europe-west1' # TODO: update to your region
+  SERVICE: 'bleau-info-stats-frontend' # TODO: update to your service name
+  WORKLOAD_IDENTITY_PROVIDER: 'projects/948104408177/locations/global/workloadIdentityPools/github-pool/providers/github-provider' # TODO: update to your workload identity provider
 jobs:
   deploy:
     runs-on: 'ubuntu-latest'
@@ -61,34 +60,43 @@ jobs:
         uses: 'google-github-actions/auth@f112390a2df9932162083945e46d439060d66ec2' # google-github-actions/auth@v2
         with:
           workload_identity_provider: '${{ env.WORKLOAD_IDENTITY_PROVIDER }}'
+          service_account: '948104408177-compute@developer.gserviceaccount.com'
+
 
       # BEGIN - Docker auth and build
       #
       # If you already have a container image, you can omit these steps.
-      - name: 'Docker Auth'
-        uses: 'docker/login-action@9780b0c442fbb1117ed29e0efdff1e18412f7567' # docker/login-action@v3
-        with:
-          username: 'oauth2accesstoken'
-          password: '${{ steps.auth.outputs.auth_token }}'
-          registry: '${{ env.REGION }}-docker.pkg.dev'
+      - name: 'Set up Cloud SDK'
+        uses: 'google-github-actions/setup-gcloud@v2'
+
+      - name: 'Configure Docker to use gcloud'
+        run: |
+          gcloud auth configure-docker ${{ env.REGION }}-docker.pkg.dev
+
+      - name: 'Verify authentication'
+        run: |
+          gcloud auth list
+          gcloud config set project ${{ env.PROJECT_ID }}
 
       - name: 'Build and Push Container'
         run: |-
-          DOCKER_TAG="$${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:${{ github.sha }}"
-          docker build --tag "${DOCKER_TAG}" .
-          docker push "${DOCKER_TAG}"
+          DOCKER_TAG_SHA="${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.SERVICE }}/${{ env.SERVICE }}:${{ github.sha }}"
+          DOCKER_TAG_LATEST="${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.SERVICE }}/${{ env.SERVICE }}:latest"
+          docker build \
+            --tag "${DOCKER_TAG_SHA}" \
+            --tag "${DOCKER_TAG_LATEST}" .
+          docker push "${DOCKER_TAG_SHA}"
+          docker push "${DOCKER_TAG_LATEST}"
+
       - name: 'Deploy to Cloud Run'
-
-        # END - Docker auth and build
-
         uses: 'google-github-actions/deploy-cloudrun@33553064113a37d688aa6937bacbdc481580be17' # google-github-actions/deploy-cloudrun@v2
         with:
           service: '${{ env.SERVICE }}'
           region: '${{ env.REGION }}'
-          # NOTE: If using a pre-built image, update the image name below:
+          project_id: '${{ env.PROJECT_ID }}'
+          flags: '--allow-unauthenticated'
+          image: '${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.SERVICE }}/${{ env.SERVICE }}:${{ github.sha }}'      # If required, use the Cloud Run URL output in later steps
 
-          image: '${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:${{ github.sha }}'
-      # If required, use the Cloud Run URL output in later steps
       - name: 'Show output'
         run: |2-
 
